gnome-control-center (1:3.38.3-1ubuntu1) UNRELEASED; urgency=medium

  * New upstream version based on Debian (lp: #1911918)

 -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 15 Jan 2021 15:10:51 +0100

gnome-control-center (1:3.38.3-1) unstable; urgency=medium

  * Team upload
  * New upstream release
  * Use upstream/3.38.x branch for packaging
  * Standards-Version: 4.5.1 (no changes required)

 -- Simon McVittie <smcv@debian.org>  Fri, 15 Jan 2021 09:34:04 +0000

gnome-control-center (1:3.38.2-2) unstable; urgency=medium

  * debian/control.in: Explicitly add libgoa-backend-1.0-dev to the BD
  * debian/control.in: Explicitly add libsoup2.4-dev to the BD

 -- Laurent Bigonville <bigon@debian.org>  Fri, 25 Dec 2020 10:16:26 +0100

gnome-control-center (1:3.38.2-1ubuntu2) hirsute; urgency=medium

  [ Brian Murray ]
  * 0016-diagnostics-Add-Whoopsie-support.patch: ensure that we always perform
    the call to automatically report crashes so that it will be turned off if
    "never" is chosen. (LP: #1906877)

 -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 07 Dec 2020 18:56:07 +0100

gnome-control-center (1:3.38.2-1ubuntu1) hirsute; urgency=medium

  * New upstream version based on Debian
  * debian/patches/gitlab_ucm_mixer_control_select.patch:
    - remove change included in the new version

 -- Sebastien Bacher <seb128@debian.org>  Mon, 23 Nov 2020 21:03:57 +0100

gnome-control-center (1:3.38.2-1) unstable; urgency=medium

  * Team upload
  * New upstream release
    - Applications: Fix a NULL pointer dereference
    - Keyboard: Fix an assertion failure
    - Network: Correctly detect when Ethernet devices are hotplugged
    - Printers: Fix memory leaks
    - Printers: Reduce panel's minimum width
    - Sharing: When disabling Tracker, also disable Tracker 3
    - Sound: Update libgvc to support UCM in recent ALSA and PulseAudio
    - Users: Avoid freeing a const string
    - Wacom: Fix a critical warning if loading a cursor fails