@@ -1,6 +1,9 @@
 gnome-control-center (1:3.38.3-1ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream version based on Debian (lp: #1911918)
+  * debian/patches/0016-diagnostics-Add-Whoopsie-support.patch:
+    - display the whoopsie status to 'autoreport' if the corresponding key
+      is set to true even if report=false (see lp #1906877)
 
  -- Sebastien Bacher <seb128@ubuntu.com>  Fri, 15 Jan 2021 15:10:51 +0100
 
